Replace almost all img by font icons, add new link to istex web extension home, big clean up and refactoring, add jshint config, change gitingore config

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang=en>
-  <meta charset=utf-8>
-  <title>Istex web header</title>
-  <script src="main.js"></script>
-  <body>
+<meta charset=utf-8>
+<title>Istex web header</title>
+<h1>Istex web header test page</h1>
+<i class="fa fa-rocket"></i>
+<script src="main.js"></script>
+<body>
