Ajout de l'attribut 'data-header-target' pour choisir ou positionner le bandeau, Reglage du gitignore, Refact. less

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=en>
 <meta charset=utf-8>
 <title>Istex web header</title>
+<header id="header"></header>
 <h1>Istex web header test page</h1>
-<i class="fa fa-rocket"></i>
-<script src="main.js"></script>
+<script src="main.js" data-header-target="#header"></script>
 <body>
