--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta charset=utf-8>
 <title>Istex web header</title>
 <header id="header"></header>
+<style>body{background-color: #d4dedf }</style>
 <h1>Istex web header test page</h1>
 <script src="main.js" data-header-target="#header"></script>
 <body>
