--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset=utf-8>
 	<title>Istex web header</title>
-	<script src="public/js/main.js" data-header-target="#header"></script>
+	<script src="js/main.js" data-header-target="#header"></script>
 </head>
 <body>
 	<h1>Istex web header test page</h1>
