--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset=utf-8>
 	<title>Istex web header</title>
-	<script src="js/main.js" data-header-target="#header"></script>
+	<script id="iwh_script" src="public/js/bundle.js" data-header-target="#header"></script>
 </head>
-<body>
+<body style="background-color: gray;margin: 0">
 	<h1>Istex web header test page</h1>
 </body>
 </html>
