--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset=utf-8>
 	<title>Istex web header</title>
-	<script id="iwh_script" src="public/js/bundle.js" data-header-target="#header"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
 </head>
 <body style="background-color: gray;margin: 0">
 	<h1>Istex web header test page</h1>
+	<script id="iwh_script" src="public/js/bundle.js" data-header-target="#header"></script>
 </body>
 </html>
