--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body style="background-color: gray;margin: 0">
 	<h1>Istex web header test page</h1>
-	<script id="iwh_script" src="public/js/bundle.js" data-header-target="#header"></script>
+	<script id="iwh_script" src="public/bundle.js" data-header-target="#header"></script>
 </body>
 </html>
