effet on/off du menu

--- a/src/header.html
+++ b/src/header.html
@@ -24,7 +24,7 @@
     <span id="iwh_fleche_services_border" ></span>
     <span id="iwh_fleche_services"></span>
   </div>
-    <div id="iwh_popin_menu">
+    <div id="iwh_popin_menu" class="off">
       <ul id="iwh_popin_menu_ul">
         <li class="iwh_popin_menu_li"><a class="iwh_popin_menu_a" href="#"><img src="" data-filename="ic_Home"/>ACCUEIL ></a></li>
         <li class="iwh_popin_menu_li"><a class="iwh_popin_menu_a" href="#"><img src="" data-filename="ic_Chercheur"/>CHERCHEUR ></a></li>
