ajout de data-menu pour afficher ou non le menu

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 </head>
 <body style="background-color: gray;margin: 0">
 	<h1>Istex web header test page</h1>
-	<script id="iwh_script" src="bundle.js"></script>
+	<script id="iwh_script" data-menu="istex" src="bundle.js"></script>
 </body>
 </html>
