--- a/src/header.html
+++ b/src/header.html
@@ -10,7 +10,7 @@
         </a>
       </li>
       <li id="iwh_header_notif">
-        <a href="https://twitter.com/projet_istex?lang=fr">
+        <a href="//twitter.com/ISTEX_Platform">
           <img src="" data-filename="ic_notifications" />
         </a>
       </li>
