variable en anglais

--- a/src/header.html
+++ b/src/header.html
@@ -21,8 +21,8 @@
   </nav>
   <div id="iwh_header_block_services" class="off">
     <div id="iwh_popin_services" ></div>
-    <span id="iwh_fleche_services_border" ></span>
-    <span id="iwh_fleche_services"></span>
+    <span id="iwh_arrow_services_border" ></span>
+    <span id="iwh_arrow_services"></span>
   </div>
     <div id="iwh_popin_menu" class="off">
     </div>
