ajout emplacement status

--- a/src/header.html
+++ b/src/header.html
@@ -9,6 +9,11 @@
           <img src="" data-filename="istex-logo" />
         </a>
       </li>
+      <li id="iwh_header_status">
+        <a href="//status.istex.fr/">
+          <img src="" data-filename="ic_status_ok" />
+        </a>
+      </li>
       <li id="iwh_header_notif">
         <a href="//twitter.com/ISTEX_Platform">
           <img src="" data-filename="ic_notifications" />
