recherche etat dans api et traitement des données

--- a/src/header.html
+++ b/src/header.html
@@ -11,7 +11,7 @@
       </li>
       <li id="iwh_header_status">
         <a href="//status.istex.fr/">
-          <img src="" data-filename="ic_status_ok" />
+          <img src="" id="iwh_header_status_img" data-filename="ic_status_unknow" />
         </a>
       </li>
       <li id="iwh_header_notif">
