--- a/src/header.html
+++ b/src/header.html
@@ -2,7 +2,7 @@
   <nav id="iwh_header_nav">
     <ul id="iwh_header_ul">
       <li id="iwh_header_menu">
-        <img src="" data-filename="ic_menu" />
+        <img title="menu du site" src="" data-filename="ic_menu" />
       </li>
       <li id="iwh_header_logo">
         <a href="https://www.istex.fr/">
@@ -10,17 +10,17 @@
         </a>
       </li>
       <li id="iwh_header_status">
-        <a href="//status.istex.fr/">
-          <img src="" id="iwh_header_status_img" data-filename="ic_status_unknow" />
+        <a title="statut de la plateforme istex" href="//status.istex.fr/">
+          <img src="" id="iwh_header_status_img" data-filename="ic_status_ok" />
         </a>
       </li>
       <li id="iwh_header_notif">
-        <a href="//twitter.com/ISTEX_Platform">
+        <a title="twitter de la plateforme istex" href="//twitter.com/ISTEX_Platform">
           <img src="" data-filename="ic_notifications" />
         </a>
       </li>
       <li id="iwh_header_services">
-        <img src="" data-filename="ic_services" />
+        <img title="Popin des services istex" src="" data-filename="ic_services" />
       </li>
     </ul>
   </nav>
