--- a/src/header.html
+++ b/src/header.html
@@ -2,24 +2,24 @@
   <nav id="iwh_header_nav">
     <ul id="iwh_header_ul">
       <li id="iwh_header_menu">
-        <img title="menu du site" src="" data-filename="ic_menu" />
+        <img title="menu du site" src="" data-filename="ic_menu" alt="menu"/>
       </li>
       <li id="iwh_header_logo">
         <a href="https://www.istex.fr/">
-          <img src="" data-filename="istex-logo" />
+          <img src="" data-filename="istex-logo" alt="istex"/>
         </a>
       </li>
       <li id="iwh_header_status">
-        <a title="statut de la plateforme istex" href="//status.istex.fr/">
+        <a id="iwh_header_status_a" title="statut de la plateforme istex" href="//status.istex.fr/">
         </a>
       </li>
       <li id="iwh_header_notif">
         <a title="twitter de la plateforme istex" href="//twitter.com/ISTEX_Platform">
-          <img src="" data-filename="ic_notifications" />
+          <img src="" data-filename="ic_notifications" alt="twitter"/>
         </a>
       </li>
       <li id="iwh_header_services">
-        <img title="Popin des services istex" src="" data-filename="ic_services" />
+        <img title="Popin des services istex" src="" data-filename="ic_services" alt="services"/>
       </li>
     </ul>
   </nav>
