ajout du readme dans la page html de presentation

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
 </head>
 <body style="background-color: gray;margin: 0">
-	<h1>Istex web header test page</h1>
+	<div id="iwh_readme">{{markdownContent}}</div>
 	<script id="iwh_script" data-menu="istex" data-logo="" src="bundle.js"></script>
 </body>
 </html>
