ajout emplacement + code twitter

--- a/src/header.html
+++ b/src/header.html
@@ -14,9 +14,7 @@
         </a>
       </li>
       <li id="iwh_header_notif">
-        <a title="twitter de la plateforme istex" href="//twitter.com/ISTEX_Platform">
-          <img src="" data-filename="ic_notifications" alt="twitter"/>
-        </a>
+          <img src="" data-filename="ic_notifications" alt="twitter"/> 
       </li>
       <li id="iwh_header_services">
         <img title="Popin des services istex" src="" data-filename="ic_services" alt="services"/>
@@ -28,6 +26,12 @@
     <span id="iwh_arrow_services_border" ></span>
     <span id="iwh_arrow_services"></span>
   </div>
-    <div id="iwh_popin_menu" class="off">
+  <div id="iwh_header_popin_menu" class="off"></div>
+  <div id="iwh_header_block_tweets" class="off">
+    <div id="iwh_tweets_parent">
+     <div id="iwh_tweets"></div>
     </div>
+     <span id="iwh_arrow_tweets_border"></span>
+     <span id="iwh_arrow_tweets"></span>
+  </div>
 </header>
