ajout du point rouge lors de nouveau tweet

--- a/src/header.html
+++ b/src/header.html
@@ -14,7 +14,7 @@
         </a>
       </li>
       <li id="iwh_header_notif">
-          <img src="" data-filename="ic_notifications" alt="twitter"/> 
+          <img src="" data-filename="ic_notifications" alt="twitter" id="iwh_header_notif_img"/> 
       </li>
       <li id="iwh_header_services">
         <img title="Popin des services istex" src="" data-filename="ic_services" alt="services"/>
