gestion header par services + renomage

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 </head>
 <body style="background-color: gray;margin: 0">
 	<div id="iwh_readme"></div>
-	<script id="iwh_script" data-menu="" data-logo="" src="bundle.js"></script>
+	<script id="iwh_script" src="bundle.js"></script>
 </body>
 </html>
